# SemanticWeb

./: README.md  pyproject.toml
EDA/: README.md  graphwiz.py  nlgraph.py  nlgraph_loader.py
Preprocessing/: README.md  preprocess.py
Tools introduction/: README.md  huggingface_intro.ipynb  networkx_intro.ipynb  nlgraph_loader.py  openai_intro.ipynb
Util/: nlgraph_loader.py
project/: .env  README.md  get_examples.py  langgraph_multi_agent.py  nlgraph_loader.py  plot_results_with_errors.py  preprocess.py  test_all_tasks.py  test_results.txt  test_results_1.txt
project/results-llama-base/: test_results.txt
project/results-llama-consensus/: test_results.txt
project/results-mistral-consensus/: test_results.txt
